scss/partials/_comments_summary.scss
div.is-comments {
  float: left;
  text-align: right;
  height: 26px;

  div.is-comments-authors {
    float: left;

    &:not(:empty){
      margin-right: 8px;
    }

    &.show-border {
      div.is-comments-author {
        background-color: white;
        border: 2px solid white;
      }
    }

    div.is-comments-author {
      float: left;
      width: 28px;
      height: 28px;
      background-color: transparent;
      border: 2px solid transparent;
      border-radius: 50%;
      margin-left: -10px;

      @include user-profile(24);

      &:first-child {
        margin-left: 0px;
      }
    }
  }

  div.is-comments-summary {
    float: left;
    font-size: 12px;
    color: rgba($deep_navy, 0.5);
    @include OC_Body_Book();
    margin-top: 4px;
    text-align: left;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    @include big_web() {
      cursor: pointer;

      &:hover {
        color: $deep_navy;
      }
    }

    @include mobile() {
      max-width: 68vw;
    }

    @include new-comments-tag();

    div.new-comments-tag {
      margin-left: 8px;
      display: inline-block;
    }

    span.add-a-comment {
      padding-left: 6px;
      color: $deep_navy;

      &:before {
        content: "";
        background-image: cdnUrl("/img/ML/tile_comments_icon.svg");
        background-size: 12px 12px;
        background-position: center 3px;
        background-repeat: no-repeat;
        width: 14px;
        height: 15px;
        float: left;
        display: block;

      }
    }
  }
}

